Support fixers adding imports